--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ body {
 
 .currency {
     border: 1px solid white;
-    padding: 11px;
+    padding: 11px 0;
     box-sizing: border-box;
     border-radius: 5px;
     width: 45px;
@@ -240,7 +240,7 @@ body {
     color: #757575;
 }
 
-.button .product-button {
+.product-button {
     display: flex;
     justify-content: center;
     width: 182px;
